@startuml

skin rose

title New Database (to showcase changes)


class queue {
  +json config
}

class course

class question {
  +bool isTaskQuestion
}

class thing as "studentTaskProgress" {
  +json taskProgress
}
note left : "lab1": {"lastEditedQueueId": 2,\n\t "assignmentProgress": {\n\t"task1":{"isDone":true},\n\t   "task2":{"isDone":true}\n\t}, \n"lab2": {"lastEditedQueueId": 3,\n\t   "assignmentProgress": {\n\t"task1":{"isDone":true}\n\t}\n}

class questionType { 
  ' questionTypes are only going to be tags, not tasks
  '+bool isTask
  '+varchar shortName
  '+bool blocking
}


queue "0..*" -- "1" course
question "0..*" -- "1" queue
question "0..*" -- "1" user
thing "0..*" -- "1" user
thing "0..*" -- "1" course
questionType "0..*" -- "0..*" question
' still not sure whether to remove this connection EDIT: i think removing it is a good idea since that way queues don't have access to all the previous questionTypes
' questionType "0..*" -- "1" queue 
queue "1" -- "0..*" questionType


hide empty methods
' hide circle


' Note to self: we are not hijacking the "event" table since then events would need to store session configs as well as have a connection to questionType, and it makes more sense to keep those things seperate

@enduml